--- a/_includes/programs_horizontal.liquid
+++ b/_includes/programs_horizontal.liquid
@@ -1,34 +1,32 @@
-<div class="card-item col">
-  <a href="{% if program.redirect %}{{ program.redirect }}{% else %}{{ program.url | relative_url }}{% endif %}">
-    <div class="card hoverable">
-      <div class="row g-0">
-        {% if program.img %}
-          <div class="card-img col-md-6">
-            {% include figure.liquid loading="eager" path=program.img sizes="(min-width: 768px) 156px, 50vw" alt="program thumbnail" %}
+<div class="col-md-6 mb-3">
+  <div class="card hoverable">
+    {% if program.img %}
+      {%
+        include figure.liquid
+        loading="eager"
+        path=program.img
+        sizes = "250px"
+        alt="program thumbnail"
+      %}
+    {% endif %}
+    <div class="card-body">
+      <h2 class="card-title text-lowercase">{{ program.title }}</h2>
+      <p class="card-text">{{ program.description }}</p>
+      <div class="row ml-1 mr-1 p-0">
+        {% if program.github %}
+          <div class="github-icon">
+            <div class="icon" data-toggle="tooltip" title="Code Repository">
+              <a href="{{ program.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
+            </div>
+            {% if program.github_stars %}
+              <span class="stars" data-toggle="tooltip" title="GitHub Stars">
+                <i class="fa-solid fa-star"></i>
+                <span id="{{ program.github_stars }}-stars"></span>
+              </span>
+            {% endif %}
           </div>
         {% endif %}
-        <div class="{% if program.img %}col-md-6{% else %}col-md-12{% endif %}">
-          <div class="card-body">
-            <h3 class="card-title text-lowercase">{{ program.title }}</h3>
-            <p class="card-text">{{ program.description }}</p>
-            <div class="row ml-1 mr-1 p-0">
-              {% if program.github %}
-                <div class="github-icon">
-                  <div class="icon" data-toggle="tooltip" title="Code Repository">
-                    <a href="{{ program.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
-                  </div>
-                  {% if program.github_stars %}
-                    <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-                      <i class="fa-solid fa-star"></i>
-                      <span id="{{ program.github_stars }}-stars"></span>
-                    </span>
-                  {% endif %}
-                </div>
-              {% endif %}
-            </div>
-          </div>
-        </div>
       </div>
     </div>
-  </a>
+  </div>
 </div>
