--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -1,6 +1,11 @@
 <!-- Metadata, OpenGraph and Schema.org -->
 {% include metadata.liquid %}
 
+<!-- Preload critical images -->
+{% if page.profile and page.profile.image %}
+  <link rel="preload" as="image" href="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
+{% endif %}
+
 <!-- Bootstrap & MDB -->
 <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url | bust_file_cache }}">
 <!-- <link rel="stylesheet" href="{{ '/assets/css/mdb.min.css' | relative_url | bust_file_cache }}"> -->
