--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -3,7 +3,7 @@
 
 <!-- Preload critical images -->
 {% if page.profile and page.profile.image %}
-  <link rel="preload" as="image" href="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
+  <link rel="preload" as="image" href="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" fetchpriority="high">
 {% endif %}
 
 <!-- Bootstrap & MDB -->
