--- a/_includes/about/education.liquid
+++ b/_includes/about/education.liquid
@@ -3,6 +3,7 @@
     <div class="card mt-3 p-3">
       <h3 class="card-title font-weight-medium">{{ education.title }}</h3>
       <div>
+        {% assign entry = education %}
         {% include cv/time_table.liquid %}
       </div>
     </div>
