--- a/_includes/about/teaching.liquid
+++ b/_includes/about/teaching.liquid
@@ -3,6 +3,7 @@
     <div class="card mt-3 p-3">
       <h3 class="card-title font-weight-medium">{{ teaching.title }}</h3>
       <div>
+        {% assign entry = teaching %}
         {% include cv/time_table.liquid %}
       </div>
     </div>
