--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -638,10 +638,33 @@ footer.sticky-bottom {
     }
   }
 
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+    align-items: stretch;
+  }
+
   .grid-sizer,
   .grid-item {
-    width: 250px;
-    margin-bottom: 10px;
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  .grid-item .card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .grid-item .card .card-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .grid-item .card .card-text {
+    flex: 1;
   }
 
   h2.category {
