--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -43,6 +43,9 @@
 {% if page.keywords or site.keywords %}
   <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
 {% endif %}
+{% if page.sitemap == false or page.noindex %}
+  <meta name="robots" content="noindex,follow">
+{% endif %}
 
 {% assign is_blog_post = false %}
 {% if page.url != '/blog/index.html' and page.url contains '/blog/' %}
